# skritter

./: .bumpversion.cfg  .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  environment.yml  main.py  pyproject.toml  setup.cfg
.github/workflows/: autotag.yml  ci.yml  pull-request.yml  push.yml  pytest.yml
python_project_template/: __init__.py
requirements/: core.txt  dev.txt  test.txt
skritter/: __init__.py  __main__.py
src/skritter/: __init__.py
